--- a/buildspec.yml
+++ b/buildspec.yml
@@ -10,32 +10,19 @@ phases:
       - aws --version
       - docker --version
 
-  pre_build:
-    commands:
-      # Set the image name and tag
-      - echo "Starting pre-build phase..."
-      - IMAGE_REPO_NAME=my-docker-repo
-      - IMAGE_TAG=$CODEBUILD_RESOLVED_SOURCE_VERSION
-      - echo "Image tag: $IMAGE_TAG"
-      - $(aws ecr get-login --no-include-email --region $AWS_REGION)
-
   build:
     commands:
       - echo "Building Docker image..."
-      - docker build -t $IMAGE_REPO_NAME:$IMAGE_TAG .
-      - docker tag $IMAGE_REPO_NAME:$IMAGE_TAG $AWS_ACCOUNT_ID.dkr.ecr.$AWS_REGION.amazonaws.com/$IMAGE_REPO_NAME:$IMAGE_TAG
+      - docker build -t docker-repo:latest .
+      - docker tag docker-repo:latest 101538135044.dkr.ecr.ap-southeast-1.amazonaws.com/docker-repo:latest
 
   post_build:
     commands:
       # Push the Docker image to Amazon ECR
       - echo "Pushing Docker image to Amazon ECR..."
-      - docker push $AWS_ACCOUNT_ID.dkr.ecr.$AWS_REGION.amazonaws.com/$IMAGE_REPO_NAME:$IMAGE_TAG
+      - docker push 101538135044.dkr.ecr.ap-southeast-1.amazonaws.com/docker-repo:latest
 
 artifacts:
   files:
-    - imagedefinitions.json
-
-cache:
-  paths:
-    - '/root/.m2/**/*'
- 
+    - "**/*"
+  dicard-paths: yes
