--- a/buildspec.yml
+++ b/buildspec.yml
@@ -5,8 +5,7 @@ phases:
     commands:
       # Install dependencies if needed (for example, AWS CLI or Docker)
       - echo "Installing dependencies..."
-      - aws --version
-      - docker --version
+      - aws ecr get-login-password --region ap-southeast-1 | docker login --username AWS --password-stdin 101538135044.dkr.ecr.ap-southeast-1.amazonaws.com
 
   build:
     commands:
